--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
       <h1 style="font-size: 70px;" >Welcome to <h1 style="animation: alternate-reverse; color: aquamarine; font-size: 70px; ">Gaming Zone!</h1></h1>
     </div>
     <div style="height: 400px; width: 50%; float:right; padding-left: 150px; padding-top: 30px;;">
-      <img src="{% static 'hero-banner.png' %}" height="400px" alt="">
+      <img src="{% static 'hero-banner.png' %}" height="400px" width="auto" alt="">
     </div>
     </div>
     <div style="color: aliceblue; margin-bottom: 40px;"><center><h1>Recently Launched Games</h1></center></div>
